# tiss-curriculum-scraper

./: .gitignore  README.md  api_calls.py  curriculum.tsv  logs.tsv  pyproject.toml  scraper.py  table_formatting.py  tiss_client.py  tsk_scraper.py
.github/workflows/: update_curriculum.yml
tests/: test_cli.py  test_formatting.py  test_scraper.py  test_scraping.py
tests/fixtures/: course_details.html
tiss_curriculum_scraper/: __init__.py  browser.py  cli.py  constants.py  formatting.py  scraping.py  storage.py
